# lambda-spec

./: Main.hs  README.md  lambda-spec.cabal
