cabal-version:       >=1.10
name:                lambda-spec
version:             0.0.1
license-file:        LICENSE
author:              Jan Synacek
maintainer:          jsynacek@redhat.com
build-type:          Simple

executable lambda-spec
  main-is:             Main.hs
  build-depends:       base >=4.13 && <4.14
                     , text
  default-language:    Haskell2010
